--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,12 @@
     box-shadow: 0 5px 10px black;
     border-radius: 10px;
 }
-p, h2 {
+
+p,
+h2 {
     text-align: center;
 }
+
 img {
     box-shadow: 0 5px 10px black;
     border-radius: 10px;
@@ -12,43 +15,50 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
-.bg-jumbo{
+
+.bg-jumbo {
     background: linear-gradient(45deg, transparent, tan);
     text-shadow: 0 1px 2px black;
 }
-a:hover{
+
+a:hover {
     background: lightgoldenrodyellow;
     border-radius: 0 5px 10px black;
     border-radius: 5px;
 }
-.bg-first{
-    background: hsl(46,29%,81%);
-    border-radius: 10px;
-    box-shadow: 0 5px 10px black;
-}
-.bg-second{
-    background: hsl(196,90%,97%);
-    border-radius: 10px;
-    box-shadow: 0 5px 10px black;
-}
-.bg-third{
-    background:hsl(40,93%,87%);
-    border-radius: 10px;
-    box-shadow: 0 5px 10px black;
-}
-.bg-fourth{
-    background: hsl(84,89%,88%);
-    border-radius: 10px;
-    box-shadow: 0 5px 10px black;
-}
-.bg-fifth{
-    background: hsl(60,97%,87%);
-    border-radius: 10px;
-    box-shadow: 0 5px 10px black;
-}
-.bg-sixth{
-    background: hsl(354,100%,97%);
+
+.bg-first {
+    background: hsl(46, 29%, 81%);
     border-radius: 10px;
     box-shadow: 0 5px 10px black;
 }
 
+.bg-second {
+    background: hsl(196, 90%, 97%);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px black;
+}
+
+.bg-third {
+    background: hsl(40, 93%, 87%);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px black;
+}
+
+.bg-fourth {
+    background: hsl(84, 89%, 88%);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px black;
+}
+
+.bg-fifth {
+    background: hsl(60, 97%, 87%);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px black;
+}
+
+.bg-sixth {
+    background: hsl(354, 100%, 97%);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px black;
+}
